--- a/src/routes/Monitor/RegionMonitor.less
+++ b/src/routes/Monitor/RegionMonitor.less
@@ -48,6 +48,24 @@
   }
 }
 
+.envList {
+  margin: 25px 0 0;
+  padding: 0;
+  list-style: none;
+  li {
+    .clearfix();
+    margin-top: 16px;
+    span {
+      color: @text-color;
+      font-size: 14px;
+      line-height: 22px;
+      &:last-child {
+        float: right;
+      }
+    }
+  }
+}
+
 .salesExtra {
   display: inline-block;
   margin-right: 24px;
